# SocketMessenger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  client_bin  gui.cpp  gui.out  gui_bin  salt_hash.cpp  server_bin
client/: client.cpp
console_GUI/: README.md  gui.cpp
console_gui/: README.md  flags.h  gui.cpp  gui.h
db_manager/: CMakeLists.txt  Dockerfile  README.md  db_manager.cpp  db_manager.h  docker-compose.yml  init.sql  main.cpp  test.cpp
hash_manager/: password_info.cpp  password_info.h  salt_hash.cpp  test.cpp
lib/: chat.h  lib.h  message.h  user.h
protocol/: data_protocol.cpp  data_protocol.h
server/: clients.h  communicator.h  data.h  server.cpp  server.h  server_new.cpp
server/test/: test1.cpp
server_connector/: server_connector.cpp  server_connector.h
